[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package"  
version = "0.0.2"
authors = [
  { name="Piyush Jain", email="piush.jain240591@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
] 

[tool.hatch.build.targets.wheel]
packages = ["src/example_package"]